# matrix-market

./: .gitignore  LICENSE
src/: CMakeLists.txt
src/bench/: CMakeLists.txt
src/bench/src/: main.cpp
src/inputs/test/: normal.mtx
src/mm/: CMakeLists.txt
src/mm/include/mm/: mm.h
src/mm/src/: header.cpp  matrix.cpp  utils.cpp  utils.h
src/mm/test/: header.cpp  matrix.cpp  utils.cpp
src/pr/: CMakeLists.txt
src/test/: test.mtx
